styles.css
@import url('https://fonts.googleapis.com/css2?family=Kode+Mono:wght@400..700&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');

body{
    margin: 0;
    background-image: url(images/wall1.png);
    display: flex;
    width: 100vw;
    min-height: 100vh;
    flex-direction: column;
    box-sizing: border-box;
    padding: 10px;
    gap: 10px;
    background-position: center;
    background-size: cover;
}

.container{
    display: flex;
    flex: 1;
    flex-direction: column;
    gap: 10px;
    min-width: 0;
}

.container.link{
    flex: 0;
    min-width: 88px;
}

.container.row{
    flex-direction: row;
}

.content{
    display: flex;
    gap: 10px;
    border: 1px solid rgba(255, 255, 255, 0.5);
    flex: 0;
    backdrop-filter: blur(10px);
    background-color: rgba(0, 0, 0, 0.5);
    color: white;
    transition: scale 0.3s ease,
                backdrop-filter 0.4s ease,
                background-color 0.4s ease,
                border-radius 0.2s ease;
    padding: 10px;
}

.content-inside{
    gap: 5px;
    flex: 1;
    border: 1px solid rgba(255, 255, 255, 0.5);
    color: white;
    transition: scale 0.3s ease,
                background-color 0.4s ease,
                border-radius 0.2s ease;
    padding: 10px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    min-width: 0;
}

.content-inside:hover{
    scale: 1.015;
    background-color: rgba(0, 0, 0, 0.5);
    border-radius: 10px;
}

.content-inside-title{
    gap: 5px;
    flex: 0;
    border: 1px solid rgba(255, 255, 255, 0.5);
    color: white;
    transition: scale 0.3s ease,
                background-color 0.4s ease,
                border-radius 0.2s ease;
    padding: 10px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    min-width: 0;
}

.content-inside-title:hover{
    scale: 1.015;
    background-color: rgba(0, 0, 0, 0.5);
    border-radius: 10px;
}

.content:hover{
    scale: 1.03;
    background-color: rgba(0, 0, 0, 0.7);
    border-radius: 10px;
    backdrop-filter: blur(20px);
}

.small{
    flex: 0;
    display: flex;
    min-height: 15%;
}

.links{
    flex: 0;
    display: flex;
}

.medium{
    flex: 0;
    display: flex;
    flex-direction: column;
}

.pfp-main{
    height: 100%;
    border: 1px solid rgba(255, 255, 255, 0.5);
    aspect-ratio: 1/1;
    transition: scale 0.3s ease,
                border-radius 0.2s ease;
}

.pfp-main:hover{
    scale: 1.03;
    border-radius: 10px;
}

.pfp{
    object-fit: cover;
    width: 100%;
    height: auto;
    min-width: 0;
    flex: 1;
    border: 1px solid rgba(255, 255, 255, 0.5);
    aspect-ratio: 1/1;
    transition: scale 0.3s ease,
                border-radius 0.2s ease;
    box-sizing: border-box;
}

.pfp:hover{
    scale: 1.03;
    border-radius: 10px;
}

.text{
    text-align: center;
    text-decoration: none;
    font-family: Kode Mono, sans-serif;
    margin: 0;
    font-size: clamp(0.2vw, 0.75vw, 20px);
}

.text.small{
    font-size: clamp(0.2vw, 0.6vw, 20px);
}

.text-large{
    font-family: Kode Mono, sans-serif;
    margin: 0;
    font-size: clamp(1vw, 2vw, 30px);
}

.screenshot{
    aspect-ratio: 16/9;
    object-fit: cover;
    flex: 1;
    border: 1px solid rgba(255, 255, 255, 0.5);
    transition: scale 0.3s ease,
                border-radius 0.2s ease;
    box-sizing: border-box;
    min-width: 0;
    min-height: 0;
}

.screenshot:hover{
    scale: 1.02;
    border-radius: 10px;
}

.content-inside-discord{
    gap: 5px;
    border: 1px solid rgba(255, 255, 255, 0.5);
    background-color: rgba(88, 101, 242, 0.5);
    flex: 1;
    color: white;
    transition: scale 0.3s ease,
                background-color 0.4s ease,
                border-radius 0.2s ease;
    padding: 10px;
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
}

.content-inside-discord:hover{
    scale: 1.015;
    background-color: rgba(88, 101, 242, 0.7);
    border-radius: 10px;
}

.content-inside-swagsocial{
    gap: 5px;
    border: 1px solid rgba(255, 255, 255, 0.5);
    background-color: rgba(52, 48, 58, 0.5);
    flex: 1;
    color: white;
    transition: scale 0.3s ease,
                background-color 0.4s ease,
                border-radius 0.2s ease;
    padding: 10px;
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
}

.content-inside-swagsocial:hover{
    scale: 1.015;
    background-color: rgba(52, 48, 58, 0.7);
    border-radius: 10px;
}

.discord{
    min-width: 0;
    width: 15%;
}

.website-button{
    transition: scale 0.3s ease,
                border-radius 0.2s ease;
}

.website-button:hover{
    scale: 1.1;
    border-radius: 10px;
}

.image-and-caption{
    display: flex;
    flex-direction: column;
    gap: 10px;
}

.terminal{
    object-fit: cover;
    object-position: left;
    flex: 1;
    border: 1px solid rgba(255, 255, 255, 0.5);
    transition: scale 0.3s ease,
                border-radius 0.2s ease;
    box-sizing: border-box;
    min-width: 0;
    max-height: 350px;
}

.terminal:hover{
    scale: 1.02;
    border-radius: 10px;
}

.content.end{
    max-height: 100px;
}

.foot{
    color: white;
    min-height: 100px;
    display: flex;
    justify-content: center;
    align-items: center;
}

